--- a/react/package.json
+++ b/react/package.json
@@ -29,6 +29,7 @@
     "@types/react": "^17.0.38",
     "@vtex/test-tools": "^3.4.1",
     "@vtex/tsconfig": "^0.6.0",
+    "beightone.buy-together-marketplace": "http://beightone.vtexassets.com/_v/public/typings/v1/beightone.buy-together-marketplace@0.3.0/public/@types/beightone.buy-together-marketplace",
     "bricobravo.store-theme": "http://bricobravo.vtexassets.com/_v/public/typings/v1/bricobravo.store-theme@0.0.2/public/@types/bricobravo.store-theme",
     "eslint-config-vtex-react": "^8.2.1",
     "typescript": "3.9.7",
@@ -42,6 +43,7 @@
     "vtex.flex-layout": "http://vtex.vtexassets.com/_v/public/typings/v1/vtex.flex-layout@0.19.0/public/@types/vtex.flex-layout",
     "vtex.iframe": "http://vtex.vtexassets.com/_v/public/typings/v1/vtex.iframe@0.5.0/public/@types/vtex.iframe",
     "vtex.locale-switcher": "http://vtex.vtexassets.com/_v/public/typings/v1/vtex.locale-switcher@0.5.6/public/@types/vtex.locale-switcher",
+    "vtex.location-availability": "http://vtex.vtexassets.com/_v/public/typings/v1/vtex.location-availability@0.5.0/public/@types/vtex.location-availability",
     "vtex.login": "http://vtex.vtexassets.com/_v/public/typings/v1/vtex.login@2.52.1/public/@types/vtex.login",
     "vtex.menu": "http://vtex.vtexassets.com/_v/public/typings/v1/vtex.menu@2.34.5/public/@types/vtex.menu",
     "vtex.minicart": "http://vtex.vtexassets.com/_v/public/typings/v1/vtex.minicart@2.63.4/public/@types/vtex.minicart",
