--- a/store/blocks/header/headerDesktop.jsonc
+++ b/store/blocks/header/headerDesktop.jsonc
@@ -7,18 +7,18 @@
       "blockClass": "sticky-header"
     },
     "children": [
-      "flex-layout.row#header-desktop", 
+      "flex-layout.row#header-desktop-upper",
       "flex-layout.row#header-categories"
     ]
   },
-  "flex-layout.row#header-desktop": {
+  "flex-layout.row#header-desktop-upper": {
     "props": {
       "horizontalAlign": "center",
       "verticalAlign": "middle",
       "preventHorizontalStretch": true,
       "preventVerticalStretch": false,
       "fullWidth": true,
-      "blockClass": "header-desktop"
+      "blockClass": "header-desktop-upper"
     },
     "children": [
       "flex-layout.col#header-logo",
@@ -48,21 +48,25 @@
     "title": "Logotipo Header"
   },
 
-
   "flex-layout.col#searchBar": {
-    "children": [
-      "drawer#menu-desktop",
-      "search-bar#desktop"
-    ]
+    "props": {
+      "blockClass": "header-containerSearchBar"
+    },
+    "children": ["drawer#menu-desktop", "search-bar#desktop"]
+  },
+
+  "drawer#menu-desktop": {
+    "children": ["menu#drawer-desktop"],
+    "props": {
+      "blockClass": "drawer-desktop",
+      "maxWidth": 368
+    }
   },
 
   "flex-layout.col#header-icons": {
-    "children": [
-      "login",
-      "link#wishlist",
-      "minicart.v2"
-    ],
+    "children": ["login", "link#wishlist", "minicart.v2"],
     "props": {
+      "blockClass": "header-containerIcons",
       "verticalAlign": "middle"
     }
   },
@@ -76,6 +80,12 @@
       "iconLabel": "Minha conta"
     }
   },
+  "icon-profile#profile": {
+    "props": {
+      "viewBox": "0 0 26 26",
+      "size": 29
+    }
+  },
   "link#wishlist": {
     "props": {
       "href": "/account/#/wishlist",
@@ -85,9 +95,38 @@
     }
   },
   "flex-layout.row#header-categories": {
-    "children": [],
+    "children": [
+      "link#category1",
+      "link#category2",
+      "link#category3",
+      "link#category4"
+    ],
     "props": {
       "blockClass": "header-categories"
+    }
+  },
+  "link#category1": {
+    "props": {
+      "href": "#",
+      "label": "Lorem ipsum dolor sit amet"
+    }
+  },
+  "link#category2": {
+    "props": {
+      "href": "#",
+      "label": "Lorem ipsum dolor sit amet"
+    }
+  },
+  "link#category3": {
+    "props": {
+      "href": "#",
+      "label": "Lorem ipsum dolor sit amet"
+    }
+  },
+  "link#category4": {
+    "props": {
+      "href": "#",
+      "label": "Lorem ipsum dolor sit amet"
     }
   }
 }
