--- a/store/blocks/header/headerMobile.jsonc
+++ b/store/blocks/header/headerMobile.jsonc
@@ -19,111 +19,16 @@
 
   "flex-layout.col#header-mobile": {
     "children": [
-      "flex-layout.row#header-mobile-first-row",
-      "flex-layout.row#header-mobile-second-row"
-    ]
-  },
-
-  "flex-layout.row#header-mobile-first-row": {
-    "children": [
-      "flex-layout.col#header-drawer",
       "flex-layout.col#header-logo",
-      "disclosure-layout#pre-header-secondCol-search",
-      "flex-layout.col#header-minicart"
-    ],
-    "props": {
-      "blockClass": "header-mobile-first-row"
-    }
-  },
-
-  "flex-layout.col#header-drawer": {
-    "children": ["drawer#menu-desktop"]
-  },
-  "disclosure-layout#pre-header-secondCol-search": {
-    "children": [
-      "disclosure-trigger#pre-header-secondCol-search",
-      "disclosure-content#pre-header-secondCol-search"
+      "flex-layout.col#header-searchBar"
     ]
   },
 
-  "disclosure-trigger#pre-header-secondCol-search": {
-    "children": ["image#search-icon"],
-
-    "props": {
-      "blockClass": "pre-header-secondCol-search"
-    }
-  },
-
-  "image#search-icon": {
-    "props": {
-      "src": "assets/icons/search-icon.svg",
-      "blockClass": "search-icon-mobile"
-    }
-  },
-
-  "disclosure-content#pre-header-secondCol-search": {
-    "children": [
-      "search-bar#desktop",
-      "disclosure-trigger#pre-header-secondCol-search-close"
-    ],
-
-    "props": {
-      "blockClass": "pre-header-secondCol-search"
-    }
-  },
-
-  "disclosure-trigger#pre-header-secondCol-search-close": {
-    "children": ["image#search-icon-close"],
-
-    "props": {
-      "blockClass": "pre-header-secondCol-search-close"
-    }
-  },
-
-  "image#search-icon-close": {
-    "props": {
-      "src": "assets/icons/close-icon.svg"
-    }
-  },
-
-  "flex-layout.row#header-mobile-second-row": {
-    "children": [
-      "link#tvs",
-      "link#headphones",
-      "link#audio",
-      "link#automotive"
-    ],
+  "flex-layout.col#header-searchBar": {
+    "children": ["search-bar#mobile"],
     "props": {
       "preventHorizontalStretch": true,
-      "blockClass": "header-mobile-second-row"
+      "blockClass": "header-mobile-searchBar"
     }
-  },
-
-  "link#tvs": {
-    "props": {
-      "label": "TV’s",
-      "blockClass": ["tvs", "mobile-menu-item"]
-    }
-  },
-  "link#headphones": {
-    "props": {
-      "label": "Fones de Ouvido",
-      "blockClass": ["headphones", "mobile-menu-item"]
-    }
-  },
-  "link#audio": {
-    "props": {
-      "label": "Áudio",
-      "blockClass": ["audio", "mobile-menu-item"]
-    }
-  },
-  "link#automotive": {
-    "props": {
-      "label": "Som Automotivo",
-      "blockClass": ["automotive", "mobile-menu-item"]
-    }
-  },
-  "flex-layout.col#header-minicart": {
-    "children": ["minicart.v2"]
   }
 }
